--- a/0xece/templates/scoreboard.html
+++ b/0xece/templates/scoreboard.html
@@ -85,7 +85,7 @@
                         <tr :class="{'table-active': index < 3}">
                             <th scope="row" x-text="index + 1"></th>
                             <td>
-                                <a :href="'/users/' + team.account_id" x-text="team.name"
+                                <a :href="'/ctf/users/' + team.account_id" x-text="team.name"
                                     style="text-decoration: none; color: inherit; font-weight: bold;"></a>
                             </td>
                             <td x-text="team.score"></td>
